# altic-mcp

./: README.md  install.sh  package-lock.json  pyproject.toml  server.json  server.py
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-16-window-workspace-manager.md
skills/altic-studio/: SKILL.md
skills/altic-studio/scripts/: README.md  capture-active-screen.swift  capture-screenshot.applescript  clipboard.swift  close-safari-tab.applescript  close-safari-window.applescript  contacts-manager.applescript  create-calendar-event.applescript  create-note.applescript  decrease-brightness.applescript  fetch-all-contacts.applescript  get-safari-page-info.applescript  get-safari-tabs.applescript  navigate-safari.applescript  (+15 more)
src/altic_mcp/: __main__.py  server.py
tests/: test_applescript.py  test_audit.py  test_calendar_expanded.py  test_clipboard.py  test_config.py  test_contacts_expanded.py  test_files.py  test_mcp_result.py  test_messages_expanded.py  test_notes_expanded.py  test_reminders_expanded.py  test_result.py  test_screen_text.py  test_screenshot.py  test_search.py  test_security.py  test_server_expanded_tools.py  test_window.py
tools/: app.py  applescript.py  audit.py  calendar.py  chrome.py  clipboard.py  config.py  constants.py  contacts.py  display.py  files.py  mcp_result.py  messages.py  notes.py  reminders.py  result.py  safari.py  screen_text.py  screenshot.py  security.py  system.py  window.py
tools/scripts/: calendar-manager.applescript  capture-active-screen.swift  decrease-brightness.applescript  extract-screen-text.swift  increase-brightness.applescript  messages-manager.applescript  notes-manager.applescript  reminders-manager.applescript
(+1 files in other folders)
