[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[project]
name = "altic-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.0.1",
    "rapidfuzz>=3.14.1",
]

[project.scripts]
altic-mcp = "altic_mcp.__main__:main"
