[project]
name = "altic-mcp"
version = "0.1.0"
description = "MCP server for macOS automation — messages, contacts, notes, reminders, calendar, files, clipboard, windows, Safari, Chrome, screenshots, and system controls."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.0.1",
    "rapidfuzz>=3.14.1",
    "websocket-client>=1.8.0",
]

[project.scripts]
altic-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "server.py"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
